# fastapi-users--exploration

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_03_05_0903-26756803edf8_initial_schema.py  2026_03_06_0002-ae75ad39f758_initial_schema.py  2026_03_15_1737-9b4379a223f2_add_user_full_name.py  2026_03_15_1745-1b2cb2897de4_make_terms_accepted_at_non_nullable.py  2026_03_15_1804-7ca027594778_move_user_defaults_to_database.py  2026_03_15_1816-fe2898271ec2_user_updated_at_trigger.py
src/explore/: __init__.py  app.py  env.py  settings.py
src/explore/auth/: models.py  routes.py  schemas.py
src/explore/auth/backends/: redis.py
src/explore/db/: bootstrap.py  config.py  migrate.py  registry.py
tests/: conftest.py  test_auth_registration_pytest.py  test_db_config.py  test_registration_pytest.py  test_route_contract.py  test_settings.py  test_user_state_semantics.py
