[project]
name = "explore"
version = "0.1.0"
description = "A project for exploring the library `fastapi-users`"
readme = "README.md"
authors = [
    { name = "Mfon Eti-mfon", email = "mfonetimfon@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-users[redis,sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.128.0",
]

[project.scripts]
explore = "explore:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "ruff>=0.14.14",
]
