[project]
name = "explore"
version = "0.1.0"
description = "A project for exploring the library `fastapi-users`"
readme = "README.md"
authors = [
    { name = "Mfon Eti-mfon", email = "mfonetimfon@gmail.com" }
]
requires-python = ">=3.14.3"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi-users[redis,sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.128.0",
    "packaging>=25.0",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
    "alembic[tz]>=1.18.4",
]

[project.scripts]
explore = "explore:main"
db-bootstrap = "explore.db.bootstrap:main"
db-migrate = "explore.db.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["E", "F", "I"]
